consistent figure references

--- a/ms.tex
+++ b/ms.tex
@@ -289,7 +289,7 @@ and in the remaining two cases, the photometric uncertainity in $W4$ is at least
 order of magnitude larger than those in $W1-W3$, so we do not use $W4$
 for any system.
 These data are reported in Table 1, and a color-color diagram showing the
-$r-J, J-K$ colors of our candidates is included as Fig. \ref{fig:photometry}.
+$r-J, J-K$ colors of our candidates is included as Fig.~\ref{fig:photometry}.
 
 \begin{figure}[htbp]
 \centerline{\includegraphics[width=0.5\textwidth]{f1}}
@@ -564,11 +564,11 @@ seven of the 31 targets.  This
 demonstrates the utility of the \texttt{vespa} tool, which will be
 crucial to interpreting future candidates detected by \KT, TESS, and PLATO
 and prioritizing follow-up observing efforts.
-We show the transit signals in Fig. \ref{fig:transits}.
+We show the transit signals in Figure~\ref{fig:transits}.
 
 \begin{figure*}[htbp]
 \centerline{\includegraphics[width=1.0\textwidth]{f2}}
-\caption{\btmtodo{PLACEHOLDER, UPDATE. Needs transit models}.
+\caption{%
 Phase-folded \KT\ photometry for all planet candidates analyzed in
 this paper.
 Each is the product of a fiducial noise model, in which the median systematic
@@ -634,9 +634,9 @@ of these measurements is adopted for our final values listed in Table~5.
 %account for the observed transit depth.
 
 
-Images for all systems AO data was obtained for is shown in Fig. \ref{Fig:AO},
+Images for all systems AO data was obtained for is shown in Figure~\ref{Fig:AO},
 while contrast curves showing the $5\sigma$ limits for detection
-as a function of orbital separation are given in Fig. \ref{Fig:CC}.
+as a function of orbital separation are given in Figure~\ref{Fig:CC}.
 
 \begin{figure*}[htbp]
 \centerline{\includegraphics[width=1.0\textwidth]{f3}}
@@ -730,7 +730,7 @@ sources of potential contamination are the following:
 
 \item 201546283.01--- For this system, the ``maximum depth'' is nearly
 identical to the observed transit depth, which would require a perfectly
-V-shaped eclipse to explain.  As this is not the case (see Figure 2),
+V-shaped eclipse to explain.  As this is not the case (see Figure~2),
 this signal cannot
 be caused by contamination from this star.
 
@@ -772,7 +772,7 @@ EPIC 201912552 in 1955 and 1989, respectively.
 This star has a proper motion of $-74 \pm 2$ mas yr$^{-1}$ in right ascension
  and $-122 \pm 4$ mas yr$^{-1}$ in declination, so it has moved by $8\farcs35$
 since the POSS I data were collected.
-As shown in Figure \ref{fig:archival}, we do not detect any targets at the
+As shown in Figure~\ref{fig:archival}, we do not detect any targets at the
 present-day location of EPIC 201912552 in either of the POSS surveys.
 
 \begin{figure*}[htbp]
