comma in abstract

--- a/ms.tex
+++ b/ms.tex
@@ -170,7 +170,7 @@ hosting a $2.24 \pm 0.25 R_\odot$ planet with $T_{eq} = 271 \pm 16$ K and an
 orbital period of 33 days.
 We also present two new open-source software packages that enabled this analysis:
 \texttt{isochrones}, a flexible tool for fitting theoretical stellar
-models to observational data to determine stellar properties; and
+models to observational data to determine stellar properties, and
 \texttt{vespa}, a new general-purpose procedure to calculate false positive probabilities
 and statistically validate transiting exoplanets.
 \end{abstract}
