--- a/ms.tex
+++ b/ms.tex
@@ -156,9 +156,10 @@ Andrew~W.~Mann\altaffilmark{\texas, \hjs},
 \date{\today, \currenttime}
 
 \begin{abstract}
-Recently, \paperit{} presented a list of 36 planet candidates orbiting
+Recently, \paperit{} identified 36 planet candidates orbiting
 31 stars in \KT\ \Ci.
-In this paper, we present stellar and planetary properties for all systems.
+In this paper, we present stellar and planetary properties for each
+candidate. 
 We combine ground-based seeing limited survey data and
 adaptive optics imaging with a detailed transit analysis scheme to validate
 \Nvalidated\ candidates as planets and identify \Nfp\ candidates as likely false positives.
