referee report notes

--- a/ms.tex
+++ b/ms.tex
@@ -357,7 +357,7 @@ atmospheres, which are based on incomplete molecular line lists and
 have been shown to predict near-IR colors that are too blue
 \citep{Thompson14}.
 
-As our stellar results are model-dependent, we caution users who intend to use these 
+\change{As our stellar results are model-dependent, we caution users who intend to use these 
 parameters for other works, such as exoplanet population studies. When available, 
 stellar parameters inferred through other techniques such as asteroseismology or 
 spectroscopy should supersede these values. 
@@ -366,7 +366,7 @@ parameters for stars with published spectra, and consistent with typical
 model-dependent uncertainties
 from photometric data \citep[e.g.][]{Huber14}.
 We provide full samples of our posteriors on the physical parameters for each 
-star\footnote{\url{http://www.astro.princeton.edu/~tdm/k2/}}.
+star\footnote{\url{http://www.astro.princeton.edu/~tdm/k2/}}.}
 
 
 
