--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1483,25 +1483,30 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{Crossfield15,
-   author = {{Crossfield}, I.~J.~M. and {Petigura}, E. and {Schlieder}, J. and
-	{Howard}, A.~W. and {Fulton}, B.~J. and {Aller}, K.~M. and {Ciardi}, D.~R. and
-	{Lepine}, S. and {Barclay}, T. and {de Pater}, I. and {de Kleer}, K. and
-	{Quintana}, E.~V. and {Christiansen}, J.~L. and {Schlafly}, E. and
-	{Kaltenegger}, L. and {Crepp}, J.~R. and {Henning}, T. and {Obermeier}, C. and
-	{Deacon}, N. and {Weiss}, L.~M. and {Isaacson}, H.~T. and {Hansen}, B.~M.~S. and
-	{Liu}, M.~C. and {Greene}, T. and {Howell}, S.~B. and {Barman}, T. and
+   author = {{Crossfield}, I.~J.~M. and {Petigura}, E. and {Schlieder}, J.~E. and 
+	{Howard}, A.~W. and {Fulton}, B.~J. and {Aller}, K.~M. and {Ciardi}, D.~R. and 
+	{L{\'e}pine}, S. and {Barclay}, T. and {de Pater}, I. and {de Kleer}, K. and 
+	{Quintana}, E.~V. and {Christiansen}, J.~L. and {Schlafly}, E. and 
+	{Kaltenegger}, L. and {Crepp}, J.~R. and {Henning}, T. and {Obermeier}, C. and 
+	{Deacon}, N. and {Weiss}, L.~M. and {Isaacson}, H.~T. and {Hansen}, B.~M.~S. and 
+	{Liu}, M.~C. and {Greene}, T. and {Howell}, S.~B. and {Barman}, T. and 
 	{Mordasini}, C.},
-    title = "{A nearby M star with three transiting super-Earths discovered by K2}",
-  journal = {ArXiv e-prints},
+    title = "{A Nearby M Star with Three Transiting Super-Earths Discovered by K2}",
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {1501.03798},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+ keywords = {eclipses, stars: individual: EPIC 201367065, techniques: photometric, techniques: spectroscopic},
      year = 2015,
-    month = jan,
-   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150103798C},
+    month = may,
+   volume = 804,
+      eid = {10},
+    pages = {10},
+      doi = {10.1088/0004-637X/804/1/10},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...804...10C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 
 @ARTICLE{Cumming08,
@@ -1758,17 +1763,22 @@ archivePrefix = "arXiv",
 	{Batalha}, N.~M. and {Borucki}, W.~J. and {Brown}, T.~M. and 
 	{Deming}, D. and {Ford}, E.~B. and {Fortney}, J.~J. and {Gilliland}, R.~L. and 
 	{Latham}, D.~W. and {Seager}, S.},
-    title = "{Low False-Positive Rate of Kepler Candidates Estimated From A Combination Of Spitzer And Follow-Up Observations}",
-  journal = {ArXiv e-prints},
+    title = "{Low False Positive Rate of Kepler Candidates Estimated From A Combination Of Spitzer And Follow-Up Observations}",
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {1503.03173},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
+ keywords = {binaries: eclipsing, eclipses, planetary systems, planets and satellites: detection, techniques: polarimetric},
      year = 2015,
-    month = mar,
-   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150303173D},
+    month = may,
+   volume = 804,
+      eid = {59},
+    pages = {59},
+      doi = {10.1088/0004-637X/804/1/59},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...804...59D},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 
 @ARTICLE{Diaz13,
@@ -2121,6 +2131,24 @@ archivePrefix = "arXiv",
 }
 
 
+@ARTICLE{Feroz09,
+   author = {{Feroz}, F. and {Hobson}, M.~P. and {Bridges}, M.},
+    title = "{MULTINEST: an efficient and robust Bayesian inference tool for cosmology and particle physics}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0809.3437},
+ keywords = {methods: data analysis , methods: statistical},
+     year = 2009,
+    month = oct,
+   volume = 398,
+    pages = {1601-1614},
+      doi = {10.1111/j.1365-2966.2009.14548.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2009MNRAS.398.1601F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Ferreira00,
    author = {{Ferreira}, P.~G. and {Jaffe}, A.~H.},
     title = "{Simultaneous estimation of noise and signal in cosmic microwave background experiments}",
@@ -2299,20 +2327,25 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{Fressin13,
-   author = {{Fressin}, F. and {Torres}, G. and {Charbonneau}, D. and {Bryson}, S.~T. and
-	{Christiansen}, J. and {Dressing}, C.~D. and {Jenkins}, J.~M. and
+   author = {{Fressin}, F. and {Torres}, G. and {Charbonneau}, D. and {Bryson}, S.~T. and 
+	{Christiansen}, J. and {Dressing}, C.~D. and {Jenkins}, J.~M. and 
 	{Walkowicz}, L.~M. and {Batalha}, N.~M.},
-    title = "{The false positive rate of Kepler and the occurrence of planets}",
-  journal = {ArXiv e-prints},
+    title = "{The False Positive Rate of Kepler and the Occurrence of Planets}",
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {1301.0842},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
+ keywords = {binaries: eclipsing, methods: data analysis, methods: statistical, planetary systems },
      year = 2013,
-    month = jan,
-   adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1301.0842F},
+    month = apr,
+   volume = 766,
+      eid = {81},
+    pages = {81},
+      doi = {10.1088/0004-637X/766/2/81},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...766...81F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 
 @article{Gaidos14,
@@ -4079,21 +4112,24 @@ archivePrefix = "arXiv",
 
 
 @article{Mann15,
-	Adscomment = {37 pages, 24 figures, 7 tables. Submitted to ApJ},
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150101635M},
-	Archiveprefix = {arXiv},
-	Arxivurl = {http://arXiv.org/abs/1501.01635},
-	Author = {{Mann}, A.~W. and {Feiden}, G.~A. and {Gaidos}, E. and {Boyajian}, T.},
-	Date-Added = {2015-02-04 02:07:23 +0000},
-	Date-Modified = {2015-02-04 02:07:23 +0000},
-	Eprint = {1501.01635},
-	Journal = {ArXiv e-prints},
-	Keywords = {Astrophysics - Solar and Stellar Astrophysics},
-	Month = jan,
-	Primaryclass = {astro-ph.SR},
-	Title = {{How to Cons-Train Your M Dwarf: measuring effective temperature, bolometric luminosity, mass, and radius}},
-	Year = 2015}
+   author = {{Mann}, A.~W. and {Feiden}, G.~A. and {Gaidos}, E. and {Boyajian}, T. and 
+	{von Braun}, K.},
+    title = "{How to Constrain Your M Dwarf: Measuring Effective Temperature, Bolometric Luminosity, Mass, and Radius}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1501.01635},
+ primaryClass = "astro-ph.SR",
+ keywords = {planetary systems, stars: abundances, stars: fundamental parameters, stars: late-type, stars: low-mass, stars: statistics},
+     year = 2015,
+    month = may,
+   volume = 804,
+      eid = {64},
+    pages = {64},
+      doi = {10.1088/0004-637X/804/1/64},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...804...64M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @ARTICLE{Marcy96,
@@ -4586,32 +4622,37 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{Mullaly15,
-   author = {{Mullally}, F. and {Coughlin}, J.~L. and {Thompson}, S.~E. and
-	{Rowe}, J. and {Burke}, C. and {Latham}, D.~W. and {Batalha}, N.~M. and
-	{Bryson}, S.~T. and {Christiansen}, J. and {Henze}, C.~E. and
-	{Ofir}, A. and {Quarles}, B. and {Shporer}, A. and {Van Eylen}, V. and
-	{Van Laerhoven}, C. and {Shah}, Y. and {Wolfgang}, A. and {Chaplin}, W.~J. and
-	{Xie}, J.-W. and {Akeson}, R. and {Argabright}, V. and {Bachtell}, E. and
-	{Borucki}, T.~B.~W.~J. and {Caldwell}, D.~A. and {Campbell}, J.~R. and
-	{Catanzarite}, J.~H. and {Cochran}, W.~D. and {Duren}, R.~M. and
-	{Fleming}, S.~W. and {Fraquelli}, D. and {Girouard}, F.~R. and
-	{Haas}, M.~R. and {He{\l}miniak}, K.~G. and {Howell}, S.~B. and
-	{Huber}, D. and {Larson}, K. and {Gautier}, III, T.~N. and {Jenkins}, J. and
-	{Li}, J. and {Lissauer}, J.~J. and {McArthur}, S. and {Miller}, C. and
-	{Morris}, R.~L. and {Patil-Sabale}, A. and {Plavchan}, P. and
-	{Putnam}, D. and {Quintana}, E.~V. and {Ramirez}, S. and {Silva Aguirre}, V. and
-	{Seader}, S. and {Smith}, J.~C. and {Steffen}, J.~H. and {Stewart}, C. and
-	{Stober}, J. and {Still}, M. and {Tenenbaum}, P. and {Troeltzsch}, J. and
-	{Twicken}, J.~D. and {Zamudio}, K.~A.},
-    title = "{Planetary Candidates Observed by Kepler VI: Planet Sample from Q1-Q16 (47 Months)}",
-  journal = {ArXiv e-prints},
+   author = {{Mullally}, F. and {Coughlin}, J.~L. and {Thompson}, S.~E. and 
+	{Rowe}, J. and {Burke}, C. and {Latham}, D.~W. and {Batalha}, N.~M. and 
+	{Bryson}, S.~T. and {Christiansen}, J. and {Henze}, C.~E. and 
+	{Ofir}, A. and {Quarles}, B. and {Shporer}, A. and {Van Eylen}, V. and 
+	{Van Laerhoven}, C. and {Shah}, Y. and {Wolfgang}, A. and {Chaplin}, W.~J. and 
+	{Xie}, J.-W. and {Akeson}, R. and {Argabright}, V. and {Bachtell}, E. and 
+	{Barclay}, T. and {Borucki}, W.~J. and {Caldwell}, D.~A. and 
+	{Campbell}, J.~R. and {Catanzarite}, J.~H. and {Cochran}, W.~D. and 
+	{Duren}, R.~M. and {Fleming}, S.~W. and {Fraquelli}, D. and 
+	{Girouard}, F.~R. and {Haas}, M.~R. and {He{\l}miniak}, K.~G. and 
+	{Howell}, S.~B. and {Huber}, D. and {Larson}, K. and {Gautier}, III, T.~N. and 
+	{Jenkins}, J.~M. and {Li}, J. and {Lissauer}, J.~J. and {McArthur}, S. and 
+	{Miller}, C. and {Morris}, R.~L. and {Patil-Sabale}, A. and 
+	{Plavchan}, P. and {Putnam}, D. and {Quintana}, E.~V. and {Ramirez}, S. and 
+	{Silva Aguirre}, V. and {Seader}, S. and {Smith}, J.~C. and 
+	{Steffen}, J.~H. and {Stewart}, C. and {Stober}, J. and {Still}, M. and 
+	{Tenenbaum}, P. and {Troeltzsch}, J. and {Twicken}, J.~D. and 
+	{Zamudio}, K.~A.},
+    title = "{Planetary Candidates Observed by Kepler. VI. Planet Sample from Q1--Q16 (47 Months)}",
+  journal = {\apjs},
 archivePrefix = "arXiv",
    eprint = {1502.02038},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
+ keywords = {catalogs, eclipses, planetary systems},
      year = 2015,
-    month = feb,
-   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150202038M},
+    month = apr,
+   volume = 217,
+      eid = {31},
+    pages = {31},
+      doi = {10.1088/0067-0049/217/2/31},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJS..217...31M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -5141,17 +5182,22 @@ archivePrefix = "arXiv",
 
 @ARTICLE{Rogers14,
    author = {{Rogers}, L.~A.},
-    title = "{Most 1.6 Earth-Radius Planets are not Rocky}",
-  journal = {ArXiv e-prints},
+    title = "{Most 1.6 Earth-radius Planets are Not Rocky}",
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {1407.4457},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
-     year = 2014,
-    month = jul,
-   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1407.4457R},
+ keywords = {methods: data analysis, methods: statistical, planetary systems, planets and satellites: composition, techniques: photometric, techniques: radial velocities},
+     year = 2015,
+    month = mar,
+   volume = 801,
+      eid = {41},
+    pages = {41},
+      doi = {10.1088/0004-637X/801/1/41},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...801...41R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 
 
@@ -5206,31 +5252,36 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{Rowe15,
-   author = {{Rowe}, J.~F. and {Coughlin}, J.~L. and {Antoci}, V. and {Barclay}, T. and
-	{Batalha}, N.~M. and {Borucki}, W.~J. and {Burke}, C.~J. and
-	{Bryson}, S.~T. and {Caldwell}, D.~A. and {Campbell}, J.~R. and
-	{Catanzarite}, J.~H. and {Christiansen}, J.~L. and {Cochran}, W. and
-	{Gilliland}, R.~L. and {Girouard}, F.~R. and {Haas}, M.~R. and
-	{Helminiak}, K.~G. and {Henze}, C.~E. and {Hoffman}, K.~L. and
-	{Howell}, S.~B. and {Huber}, D. and {Hunter}, R.~C. and {Jang-Condell}, H. and
-	{Jenkins}, J.~M. and {Klaus}, T.~C. and {Latham}, D.~W. and
-	{Li}, J. and {Lissauer}, J.~J. and {McCauliff}, S.~D. and {Morris}, R.~L. and
-	{Mullally}, F. and {Ofir}, A. and {Quarles}, B. and {Quintana}, E. and
-	{Sabale}, A. and {Seader}, S. and {Shporer}, A. and {Smith}, J.~C. and
-	{Steffen}, J.~H. and {Still}, M. and {Tenenbaum}, P. and {Thompson}, S.~E. and
-	{Twicken}, J.~D. and {Van Laerhoven}, C. and {Wolfgang}, A. and
+   author = {{Rowe}, J.~F. and {Coughlin}, J.~L. and {Antoci}, V. and {Barclay}, T. and 
+	{Batalha}, N.~M. and {Borucki}, W.~J. and {Burke}, C.~J. and 
+	{Bryson}, S.~T. and {Caldwell}, D.~A. and {Campbell}, J.~R. and 
+	{Catanzarite}, J.~H. and {Christiansen}, J.~L. and {Cochran}, W. and 
+	{Gilliland}, R.~L. and {Girouard}, F.~R. and {Haas}, M.~R. and 
+	{He{\l}miniak}, K.~G. and {Henze}, C.~E. and {Hoffman}, K.~L. and 
+	{Howell}, S.~B. and {Huber}, D. and {Hunter}, R.~C. and {Jang-Condell}, H. and 
+	{Jenkins}, J.~M. and {Klaus}, T.~C. and {Latham}, D.~W. and 
+	{Li}, J. and {Lissauer}, J.~J. and {McCauliff}, S.~D. and {Morris}, R.~L. and 
+	{Mullally}, F. and {Ofir}, A. and {Quarles}, B. and {Quintana}, E. and 
+	{Sabale}, A. and {Seader}, S. and {Shporer}, A. and {Smith}, J.~C. and 
+	{Steffen}, J.~H. and {Still}, M. and {Tenenbaum}, P. and {Thompson}, S.~E. and 
+	{Twicken}, J.~D. and {Van Laerhoven}, C. and {Wolfgang}, A. and 
 	{Zamudio}, K.~A.},
-    title = "{Planetary Candidates Observed by Kepler V: Planet Sample from Q1-Q12 (36 Months)}",
-  journal = {ArXiv e-prints},
+    title = "{Planetary Candidates Observed by Kepler. V. Planet Sample from Q1-Q12 (36 Months)}",
+  journal = {\apjs},
 archivePrefix = "arXiv",
    eprint = {1501.07286},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
+ keywords = {catalogs, planets and satellites: fundamental parameters},
      year = 2015,
-    month = jan,
-   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150107286R},
+    month = mar,
+   volume = 217,
+      eid = {16},
+    pages = {16},
+      doi = {10.1088/0067-0049/217/1/16},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJS..217...16R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 
 @ARTICLE{Scholz10,
